--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
       html, body {
         width: 100%;
@@ -22,6 +21,7 @@
     </style>
     <!--font-->
     <link href="https://fonts.googleapis.com/css?family=Heebo:100,300,400,500,700,800,900" rel="stylesheet">
+    <title>POPCORN & NACHOS</title>
 
   </head>
   <body>
